# gnomad-webcanvas

./: .cursorignore  .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CHANGELOG.txt  HUMAN.html  HUMAN.md  HUMAN.txt  PROJECT_SUMMARY.md  README.html  README.md  README.txt  ROADMAP.md  STATUS.md  WORKSPACE_LINKS.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: CHRONICLER.md  PROJECT_SOP.md
docs/: ACCESSIBILITY.html  ACCESSIBILITY.md  ACCESSIBILITY.txt  ARCHITECTURE.html  ARCHITECTURE.md  ARCHITECTURE.txt  BUILD.html  BUILD.md  BUILD.txt  BUILD_PLATFORMS.html  BUILD_PLATFORMS.md  BUILD_PLATFORMS.txt  CROSS_PLATFORM_CHECKLIST.html  CROSS_PLATFORM_CHECKLIST.md  CROSS_PLATFORM_CHECKLIST.txt  CROSS_PLATFORM_CODE_REVIEW.html  CROSS_PLATFORM_CODE_REVIEW.md  CROSS_PLATFORM_CODE_REVIEW.txt  DEMO_SCRIPT.html  DEMO_SCRIPT.md  DEMO_SCRIPT.txt  DOCS_INDEX.html  DOCS_INDEX.md  DOCS_INDEX.txt  PLATFORM_SPLIT.html  PLATFORM_SPLIT.md  PLATFORM_SPLIT.txt  PRIVACY.html  PRIVACY.md  PRIVACY.txt  QA_CHECKLIST.html  QA_CHECKLIST.md  QA_CHECKLIST.txt  RECOMMENDED_DOCS.html  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/bundle/linux/: gnomad-webcanvas-launch.sh  postinstall.sh  webcanvas.desktop.hbs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  path_guard.rs  updater.rs
src-tauri/src/menu/: desktop.rs  linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs
(+99 files in other folders)
