[package]
name = "gnomad-webcanvas"
version = "0.1.0-alpha.1"
description = "Gnomad Webcanvas — live HTML/CSS/JS editor"
authors = ["Gnomad Studio"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
url = "2"
dirs = "6"
ureq = { version = "3", features = ["json"] }
